# src/dto/generatedModel.dto.ts
@@ -1,0 +1,6 @@
+export interface GeneratedModelDTO {
+    id: number;
+    name: string;
+    image: string;
+    userId: number;
+}
